# M3

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DETAILS.md  README.md  agent_pipeline.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  langgraph_qwen.py
config/: baseline.example.json  local.baseline.json
configs/: default.yaml
data/: __init__.py  loaders.py  schema.py
docs/: implementation_status.md  runbook.md
eval/: __init__.py  audit_report.py  metrics.py
main/: run_baseline.py
models/: __init__.py  qwen3vl.py
prompts/: change_v1.md  count_localize_v1.md  count_repair_v1.md  count_tile_v1.md  count_tile_v2.md  count_tile_v3.md  count_tile_v4.md  deepseek_judge_repair_v1.md  deepseek_judge_v1.md  deepseek_vqa_judge_v1.md  general_vqa_v1.md  general_vqa_v2.md  json_repair_v1.md  missing_point_review_v1.md  missing_point_review_v2.md  missing_point_review_v3.md  router_agent_v2.md  router_v1.md  seam_verify_v1.md  spatial_candidate_review_v1.md  spatial_candidate_review_v2.md  spatial_candidate_review_v3.md  spatial_v1.md  spatial_v2.md  spatial_v3.md  spatial_v4.md  spatial_v5.md  target_parse_v1.md
spacers_agent/: __init__.py  cli.py  counting.py  data_audit.py  dataset_adapters.py  errors.py  evaluation.py  events.py  experts.py  imaging.py  reporting.py  routing.py  run_store.py  schemas.py  seam.py  settings.py  targeting.py  visualization.py  vqa_geometry.py  vqa_report.py  workflow.py
tests/: test_baseline_adapters.py  test_baseline_audit_report.py  test_dataset_audit.py  test_metrics.py  test_multiagent_vqa_pipeline.py  (+13 more)
(+60 files in other folders)
